versioned_docs/version-2.8.0/Classes/Node.mdx
---
id: node-class
title: "Class : Node"
description: The Node class represents a Lavalink node.
slug: /classes/Node
sidebar_label: Node
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Constructor {#constructor}

<Tabs>
    <TabItem value="node" label="Node : options" default>
        ```js
        new Magmastream.Node(options: NodeOptions)
        ```

        | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                              | <i className="fa-solid fa-list"/> Description                        |
        |:-----------------------------------------------|:----------------------------------------------------------------------------------------------------|:---------------------------------------------------------------------|
        | `host`                                         | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)   | The host for the node.                                               |
        | `port`                                         | [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)   | The port for the node.                                               |
        | `password`                                     | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)   | The password for the node.                                           |
        | `secure`                                       | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) | Whether the host uses SSL.                                           |
        | `identifier`                                   | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)   | The identifier for the node.                                         |
        | `retryAmount`                                  | [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)   | The retryAmount for the node.                                        |
        | `retryDelay`                                   | [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)   | The retryDelay for the node.                                         |
        | `resumeStatus`                                 | [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) | Whether to resume the previous session.                              |
        | `resumeTimeout`                                | [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)   | The time the lavalink server will wait before it removes the player. |
        | `requestTimeout`                               | [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)   | The timeout used for api calls.                                      |
        | `priority`                                     | [number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)   | Priority of the node.                                                |



    </TabItem>

</Tabs>

## Table of contents {#toc}

| <i className="fa-solid fa-pen"/> Properties | <i className="fa-solid fa-boxes-stacked"/> Methods  |
| :------------------------------------------ | :-------------------------------------------------- |
| [socket](#socket)                           | [address()](#address)                               |
| [stats](#stats)                             | [connected()](#connected)                           |
| [manager](#manager)                         | [connect()](#connect)                               |
| [sessionId](#sessionId)                     | [createSessionIdsFile()](#createSessionIdsFile)     |
| [rest](#rest)                               | [deleteSponsorBlock()](#deleteSponsorBlock)         |
| [info](#timescale)                          | [destroy()](#destroy)                               |
|                                             | [extractSpotifyArtistID()](#extractSpotifyArtistID) |
|                                             | [extractSpotifyTrackID()](#extractSpotifyTrackID)   |
|                                             | [fetchInfo()](#fetchInfo)                           |
|                                             | [getSponsorBlock()](#getSponsorBlock)               |
|                                             | [loadSessionIds()](#loadSessionIds)                 |
|                                             | [setSponsorBlock()](#setSponsorBlock)               |
|                                             | [updateSessionId()](#updateSessionId)               |

## Properties {#properties}

### socket {#socket}

> The socket for the node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [WebSocket](https://developer.mozilla.org/en-US/docs/Web/API/WebSocket) | [null](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Null)

---

### stats {#stats}

> The stats for the node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`nodeStats{}`](../Typedefs/Node/nodeStats.mdx#nodeStats)

---

### manager {#manager}

> The manager for the node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`Manager`](./Manager.mdx)

---

### sessionId {#sessionId}

> The node's session ID.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | [null](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Null)

---

### rest {#rest}

<span className="info badge">readonly</span>

> The REST instance.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`Rest`](./Rest.mdx)

---

### info {#info}

> Actual Lavalink information of the node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [`lavalinkInfo{}`](../Typedefs/LavalinkInfo.mdx#lavalinkInfo) | [null](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Null)

## Methods {#methods}

### address() {#address}

<span className="info badge">get</span>

> Returns the address for this node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)

---

### connected() {#connected}

<span className="info badge">get</span>

> Returns if connected to the Node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)

---

### connect() {#connect}

> Connects to the Node.<br/><br/>
> If the node is already connected, this method will do nothing.<br/>
> If the node has a session ID, it will be sent in the headers of the WebSocket connection.<br/>
> If the node has no session ID but the `resumeStatus` option is true, it will use the session ID<br/>
> stored in the sessionIds.json file if it exists.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)

---

### createSessionIdsFile() {#createSessionIdsFile}

> Creates the sessionIds.json file if it doesn't exist. This file is used to
> store the session IDs for each node. The session IDs are used to identify
> the node when resuming a session.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)

---

### deleteSponsorBlock(player) {#deleteSponsorBlock}

> Deletes the sponsorblock segments for a player.<br/>
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<void>](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> | :--------------------------------------------- | :------------------------------------- | :-------------------------------------------- | :-----------------------------------------: |
> | `player`                                       | [`Player`](./Player.mdx)               | The player to delete the sponsorblocks for.   |   <i className="fa-solid fa-xmark"/>      |

---

### destroy() {#destroy}

> Destroys the Node and all players connected with it.<br/><br/>
> This method will:
>
> -   Destroy all players connected to the node
> -   Close the WebSocket connection
> -   Remove all event listeners on the WebSocket
> -   Clear the reconnect timeout
> -   Emit a "nodeDestroy" event with the node as the argument
> -   Destroy the node from the manager
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)

---

### extractSpotifyArtistID(url) {#extractSpotifyArtistID}

> Extracts the Spotify artist ID from a URL.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | [null](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Null)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:--------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `url`                                          | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | The URL to extract the artist ID from.        |     <i className="fa-solid fa-xmark"/>      |

---

### extractSpotifyTrackID(url) {#extractSpotifyTrackID}

> Extracts the Spotify track ID from a URL.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | [null](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Null)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                                                            | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:--------------------------------------------------------------------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `url`                                          | [string](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | The URL to extract the artist ID from.        |     <i className="fa-solid fa-xmark"/>      |

---

### fetchInfo() {#fetchInfo}

> Fetches Lavalink node information.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`lavalinkInfo{}`>](../Typedefs/LavalinkInfo.mdx#lavalinkInfo)

---

### getSponsorBlock(player) {#getSponsorBlock}

> Gets the current sponsorblock segments for a player.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<`sponsorBlockSegment[]`>](../Typedefs/SponsorBlock/sponsorBlockSegment.mdx)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type | <i className="fa-solid fa-list"/> Description | <i className="fa-solid fa-flask"/> Optional |
> |:-----------------------------------------------|:---------------------------------------|:----------------------------------------------|:-------------------------------------------:|
> | `player`                                       | [`Player`](./Player.mdx)               | The player to get the sponsor blocks for.     |     <i className="fa-solid fa-xmark"/>      |

---

### loadSessionIds() {#loadSessionIds}

> Loads session IDs from the sessionIds.json file if it exists.<br/><br/>
> The session IDs are used to resume sessions for each node.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)

---

### setSponsorBlock(player, segments) {#setSponsorBlock}

> Sets the sponsorblock segments for a player.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [Promise](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)[\<void>](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
>
> | <i className="fa-solid fa-hashtag"/> Parameter | <i className="fa-solid fa-font"/> Type                              | <i className="fa-solid fa-list"/> Description                                             | <i className="fa-solid fa-flask"/> Optional |
> | :--------------------------------------------- | :------------------------------------------------------------------ | :---------------------------------------------------------------------------------------- | :-----------------------------------------: |
> | `player`                                       | [`Player`](./Player.mdx)                                            | The player to set the sponsor blocks for.                                                 |    <i className="fa-solid fa-xmark"/>      |
> | `segments`                                     | [`sponsorBlockSegment[]`](../Typedefs/SponsorBlock/sponsorBlockSegment.mdx) | The sponsorblock segments to set. Defaults to `["sponsor", "selfpromo"]` if not provided. |   <i className="fa-solid fa-xmark"/>      |

---

### updateSessionId() {#updateSessionId}

> Updates the session ID in the sessionIds.json file.<br/><br/>
> This method is called after the session ID has been updated, and it writes the new session ID to the sessionIds.json file.
>
> <i className="fa-solid fa-right-to-bracket"/> Return: [void](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void)
